fix(playground): change the position of button dev to right section and make right section sticky AND fix(globals.css): comment overflow hidden property of html and body

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@ button {
 
 /* Prevent horizontal overflow on mobile */
 html, body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   max-width: 100vw;
 }
 
